# JustBeYourself

./: Makefile.common  README.md  bookscreen.cpp  bookscreen.h  gamescreen.cpp  main.cpp
assets/game/: BOOK.snd  GAME.air  GAME.sff  GAME.snd  INTRO.air  INTRO.sff  OUTRO.air  OUTRO.sff  STORY.def
cmake/: CMakeLists.txt
vita/: CmakeLists.txt
windows/: JustBeYourself.sln  JustBeYourself.vcxproj  JustBeYourself.vcxproj.filters  JustBeYourselfAll.sln  JustBeYourselfDreamcast.sln  JustBeYourselfDreamcast.vcxproj  JustBeYourselfVita.sln  JustBeYourselfVita.vcxproj  JustBeYourselfWeb.sln  JustBeYourselfWeb.vcxproj  resource.h
