cmake_minimum_required(VERSION 3.25) 
project(JustBeYourself CXX)               
set(CMAKE_CXX_STANDARD 17)            
set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")

include("${CMAKE_SOURCE_DIR}/../../addons/prism/cmake/prism.cmake" REQUIRED)

# Add source/header files to project
file(GLOB_RECURSE SOURCES ../*.cpp SOURCES ../*.h SOURCES ../*.rc)
list(FILTER SOURCES EXCLUDE REGEX ".*web.*")
list(FILTER SOURCES EXCLUDE REGEX ".*/build/.*")

add_link_options(/NODEFAULTLIB:libcmt.lib)
add_link_options(/IGNORE:4099,4286,4098)
add_link_options(/OPT:REF)
add_link_options(/OPT:ICF)

# Define exe
add_executable(JustBeYourself ${SOURCES})

# Link with libraries
target_link_libraries(JustBeYourself prism)
target_link_libraries(JustBeYourself SDL2)
target_link_libraries(JustBeYourself SDL2main)
target_link_libraries(JustBeYourself SDL2_image)
target_link_libraries(JustBeYourself SDL2_mixer)
target_link_libraries(JustBeYourself SDL2_ttf)
target_link_libraries(JustBeYourself enet)
target_link_libraries(JustBeYourself freetype)
target_link_libraries(JustBeYourself glew)
target_link_libraries(JustBeYourself curl)
target_link_libraries(JustBeYourself libjpeg)
target_link_libraries(JustBeYourself libpng)
target_link_libraries(JustBeYourself libwebp)
target_link_libraries(JustBeYourself zstd)
target_link_libraries(JustBeYourself zlib)
target_link_libraries(JustBeYourself crypt32)
target_link_libraries(JustBeYourself wldap32)
target_link_libraries(JustBeYourself ws2_32)
target_link_libraries(JustBeYourself winmm)
target_link_libraries(JustBeYourself OpenGL32)
target_link_libraries(JustBeYourself version)

# Define preprocessor definitions
target_compile_definitions(JustBeYourself PUBLIC UNICODE)
target_compile_definitions(JustBeYourself PUBLIC _UNICODE)

set_property(TARGET JustBeYourself PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
target_compile_options(JustBeYourself PRIVATE /Gy)

set_target_properties(JustBeYourself PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/../assets)
set_target_properties(JustBeYourself PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/../assets)

# Copy over DLLs
file(GLOB DLLS "${CMAKE_SOURCE_DIR}/../../addons/prism/windows/vs17/DLL/*.dll")
foreach(DLL ${DLLS})
  add_custom_command(TARGET JustBeYourself POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_if_different
    ${DLL}
    $<TARGET_FILE_DIR:JustBeYourself>)
endforeach()

# Optimize for release build
if(CMAKE_BUILD_TYPE STREQUAL "Release")
  target_compile_options(JustBeYourself PRIVATE /O2)
endif()
